--- a/templates/responder/json/payload/read.twig
+++ b/templates/responder/json/payload/read.twig
@@ -1,6 +1,6 @@
 $params = new Parameters($request->query->all());
 $serializer = {{ class }}::getSerializer();
-$resource = new Resource($payload->get('model'), $serializer);
+$resource = new Resource($payload->getModel(), $serializer);
 $resource = $resource->with($params->getInclude({{ includes|raw }}));
 $resource = $resource->fields($params->getFields({{ fields|raw }}));
 $document = new Document($resource);
